DATA-1091 Java 21 migration