@@ -1,4 +1,4 @@
-FROM openjdk:11
+FROM eclipse-temurin:21.0.5_11-jdk
 VOLUME /tmp
 ARG JAR_FILE
 COPY ${JAR_FILE} app.jar
@@ -11,4 +11,5 @@ EXPOSE 5000
 ENV LANG=C.UTF-8
 
 # Commande pour lancer l'application Spring Boot
-ENTRYPOINT exec java -jar /app.jar
+ENTRYPOINT ["java","--add-opens", "java.desktop/java.awt.font=ALL-UNNAMED", "--add-opens", "java.base/java.util=ALL-UNNAMED","--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED","--add-opens", "java.base/java.lang=ALL-UNNAMED","--add-opens", "java.base/java.io=ALL-UNNAMED", "--add-opens", "java.base/java.text=ALL-UNNAMED","-jar","/app.jar"]
+
